# segmentist

./: .gitignore  Cargo.toml  IPTABLES_CMDS.sh  README.md  WEB_DEPENDENCY_DOWNLOAD.sh  build.sh
probes/: Cargo.toml
probes/src/: lib.rs
probes/src/packet_inflator/: main.rs
probes/src/packetsize_monitor/: main.rs  mod.rs
src/: connection.rs  lib.rs  main.rs  web.rs
web/: index.html
web/js/: submit.js
