[package]
name = "segmentist"
version = "0.3.0"
repository = "https://github.com/GermanCoding/segmentist"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
redbpf = { git = "https://github.com/GermanCoding/redbpf.git", branch = "pin-programs", features = ["load"] }
tokio = { version = "1.20", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
futures = "0.3"
url = "2.2"
libc = "0.2"
users = "0.11"
caps = "0.5"
semver = "1.0"
nix = { version = "0.24", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }
tokio-native-tls = "0.3"
probes = { path = "./probes" }
actix-web = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"